syntax = "proto3";

package scanner.net.api.packet;

enum Types {
  UNKNOWN = 0x00000000;
  COMMON_VERSION = 0x00001001;
  DATA_LOADED_JOBS_LIST = 0x00100001;
  DATA_NOTIFIES = 0x00100002;
  CONNECTORS_REGISTER_JOB_NOTIFIER = 0x01000001;
  CONNECTORS_UNREGISTER_JOB_NOTIFIER = 0x01000002;
}